validation/archivista-data-provider-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sExternalDataValidation
metadata:
  name: deny-images-with-no-passing-policy
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["*"]
        kinds: ["Pod"]
    namespaces: ["gatekept-deploy"]
